# worthy

./: .gitignore  CMakeLists.txt  TODO.md
doc/: Doxyfile.in  design.md
include/worthy/: abstract-value.h  abstract_value.h  map.h  runtime.h  string.h  type.h  value.h  worthy.h
include/worthy/internal/: primitive.h  variant-base.h
src/: abstract-value.cpp  abstract_value.cpp  adapters.cpp  adapters.h  hashmap.cpp  internal-runtime.h  internals.cpp  internals.h  map.cpp  memory.cpp  runtime.cpp  string.cpp  utils.cpp  utils.h  value.cpp
src/heap/: heap.cpp  page.cpp  page.h  root-page.h  root-space.cpp  root-space.h  root.cpp  root.h  space.cpp  space.h
src/internal/: align.h  allocation.cpp  allocation.h  atomic_intrusive_stack.h  block-allocator.cpp  block-allocator.h  block-constants.h  block.cpp  block.h  block_allocator.cpp  block_allocator.h  block_layout.h  block_owner.cpp  block_owner.h  blocked_vector.h  blocked_vector_iterator.h  byte_array.cpp  byte_array.h  check.cpp  check.h  config.h.in  dynamic_array.h  dynamic_array_iterator.h  eternity.cpp  eternity.h  frame.cpp  frame.h  free-block.cpp  free-block.h  garbage_collector.cpp  garbage_collector.h  gc_visitor.h  gc_worker.cpp  gc_worker.h  gc_workspace.cpp  gc_workspace.h  generation.cpp  generation.h  globals.h  handle.cpp  (+65 more)
test/: block_test.cpp  blocked_vector_test.cpp  byte_array_test.cpp  garbage_collector_test.cpp  handle_pool_test.cpp  hash_test.cpp  hashmap-test.cpp  hashmap_test.cpp  map_test.cpp  root_block_allocator_test.cpp  sample.cpp
test/integration/: map_test.cpp
test/unit/: block-allocator-test.cpp  block-test.cpp  block_allocator_test.cpp  block_test.cpp  blocked_vector_test.cpp  dynamic_array_test.cpp  handle_container_test.cpp  hash-test.cpp  hashmap-test.cpp  hashmap_test.cpp  map-test.cpp  reference-space-test.cpp  root-space-test.cpp  root_block_allocator_test.cpp  value-test.cpp  variant-test.cpp
